# makai

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cmake_build.bat  config.json  imgui.ini  open_sln.bat
.claude/: settings.local.json
.claude/commands/: fix-review.md
.github/: copilot-instructions.md
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml
docs/: coding_style.md  core_system_design.md  engine_architecture.md  handle_system_design.md  restructure-src.txt
engine/: App.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Game.cpp  Game.hpp
engine/core/handle/: HandlePool.hpp
engine/core/id/: Name.cpp  Name.hpp  NameTable.cpp  TypeId.cpp  TypeRegistry.cpp  TypeRegistry.hpp
engine/core/log/: Assert.hpp  Logger.cpp  Logger.hpp  LoggerGuard.hpp  msvc_sink.hpp
engine/imgui/: ImGuiManager.cpp  ImGuiManager.hpp
engine/memory/: BuddyAllocator.cpp  BuddyAllocator.hpp  DoubleFrameAllocator.hpp  FreeListMemoryResource.hpp  GameObjectFactory.hpp  MemoryManager.cpp  MemoryManager.hpp  MemoryManagerGuard.hpp  StackAllocator.hpp  StlAllocator.hpp
engine/objects/: GameObject.hpp
engine/platform/: SdlGuard.hpp  Window.cpp
engine/resource/: TextureManager.hpp
engine/scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
engine/states/: StateMachine.cpp
game/: App.hpp
game/objects/: Player.cpp
game/scenes/: DebugBootScene.cpp  DebugBootScene.hpp  GameScene.cpp  GameScene.hpp  LogTestScene.cpp  LogTestScene.hpp  MemoryTestScene.cpp  MemoryTestScene.hpp  TitleScene.cpp  TitleScene.hpp
game/states/: PlayerStates.hpp
src/: main.cpp
src/core/: Config.cpp  Config.hpp  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  SceneManager.cpp  SceneManager.hpp  Window.cpp  Window.hpp
src/engine/: CMakeLists.txt
src/engine/core/: App.hpp  Config.cpp  Config.hpp  Game.cpp  Game.hpp  ImGuiManager.cpp  ImGuiManager.hpp  SceneManager.cpp  SceneManager.hpp  Window.cpp  Window.hpp
src/engine/core/handle/: Handle.hpp  HandlePool.hpp  HandleTypes.hpp
src/engine/core/id/: Name.cpp  Name.hpp  NameTable.cpp  NameTable.hpp  StringId.cpp  StringId.hpp  TypeId.hpp  TypeInfo.hpp  TypeRegistry.cpp  TypeRegistry.hpp  name.cpp  name.h  string_id.cpp  string_id.h  type_registry.cpp
src/engine/memory/: BuddyAllocator.cpp  BuddyAllocator.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  FreeListMemoryResource.hpp  GameObjectFactory.hpp  LinearAllocator.cpp  LinearAllocator.hpp  MemoryManager.cpp  MemoryManager.hpp  PagedAllocator.cpp  PagedAllocator.hpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp  StlAllocator.hpp  ThreadSafeAllocator.hpp
src/engine/objects/: GameObject.hpp
src/engine/scenes/: Scene.hpp
src/engine/states/: StateMachine.hpp
src/engine/utils/: Assert.hpp  FontManager.cpp  FontManager.hpp  Logger.cpp  Logger.hpp  Math.hpp  TextureManager.cpp  TextureManager.hpp  Timer.hpp  msvc_sink.hpp
src/game/: App.hpp
src/game/objects/: Player.hpp
src/game/scenes/: DebugBootScene.cpp  DebugBootScene.hpp  GameScene.cpp  GameScene.hpp  LogTestScene.cpp  LogTestScene.hpp  MemoryTestScene.cpp  MemoryTestScene.hpp  TitleScene.cpp  TitleScene.hpp
src/game/states/: PlayerStates.cpp  PlayerStates.hpp
src/memory/: MemoryManager.hpp  PoolAllocator.hpp
src/objects/: GameObject.hpp  Player.cpp  Player.hpp
src/scenes/: GameScene.cpp  GameScene.hpp  Scene.hpp  TitleScene.cpp  TitleScene.hpp
src/states/: PlayerStates.hpp  StateMachine.cpp  StateMachine.hpp
src/utils/: FontManager.hpp  Timer.hpp
